2003-07-28 Simon Waters <Simon@wretched.demon.co.uk>      

	* ensure gnuchessx included in EXTRA_DIST

2003-06-30 Simon Waters <Simon@wretched.demon.co.uk>      

	* Fix to Posix thread for readline
	
	* Fix to ensure "HARD" is default
	
2003-06-30 Mike Curtis <chess@wt.net>
	
	* Improve Posix thread handling

2003-06-28 Mike Curtis <chess@wt.net>

	* Portability fix IsTrustedPlayer

2003-06-28 Simon Waters <Simon@wretched.demon.co.uk>      

	* Portability fix to lexpgn.l

	* Changes to lexpgn.l to handle some special
	  cases.

	* Fix trailing "/" in FEN causes
	  buffer overflow issues. Trailing "/" is
	  kept for compatibility reasons with 5.04

2003-06-19 Mike Curtis <chess@wt.net>

	* Portability fix to lexpgn.l

2003-06-19 Simon Waters <Simon@wretched.demon.co.uk>      

	* Add "--easy" flag to command line.

	* Add "--manual" flah to command line.

	* Fix to new PGN parser to handle odd
	  character in tag data.

2003-06-15 Simon Waters <Simon@wretched.demon.co.uk>      

	* const declaration for progname removed to 
	  resolve problems with other compilers.

	* Reapply earlier fix to ensure the players
	  names for white and black are fixed which got
	  overwritten with pgn parser merge.

	* Remove GNU tool derived files from CVS to save
	  space and avoid problems with timestamps.

	* Tell xboard sigint=0 to avoid workaround on Solaris.

	* Various code clean-ups.

	* Redefine DRAWSCORE to 0, faster, and avoids excessive
	  draw penalties.

2003-06-13 Simon Waters <Simon@wretched.demon.co.uk>      

	* Use CalcHashSize in main.c

	* Check HashSize return code in cmd.c

	* Put maximum check in CalcHashSize

2003-06-12 Simon Waters <Simon@wretched.demon.co.uk>      

	* Convert autoconf to AX_CREATE_STDINT_H from AC_CREATE_STDINT_H

	* Changes suggested by latest "autoscan" including tests
	  for functions we can't do without.

	* Changes required to merge DAW contribution below.

2003-06-12 David A. Wheeler <dwheeler@dwheeler.com> 